# NHLScraper

./: 1  CaphitScraper.py  DucksRecords.json  FlamesRecords.json  HeadShot.py  MyRecord.json  Player_Links.txt  RosterScraper.py  SplitNames.py  TeamLogo.py  TeamLogos.json  WorkNameSplitter.py  caphit.py  data.txt  finalList.txt  hi.json  input.py  nhl_scraper.py  pyproject.toml  script.py  ttt.txr  txt.py
DataMang/: Flames.json  Roster.txt  RostersText.txt  f.json  mang.json  name.txt  work.json
env/Scripts/: Activate.ps1  activate  activate.bat
nhlAPI/: addPhotos.py  cleanLogos.json  cleanTeams.json  cleanteeems.json  cleanteeems2.json  devilsstats.json  rosterAPI.py  splits.json  statsapi.py  teamstatsapi.json  temp.json  tttt.json  writeTeam.json
nhlAPI/data/: Rosters.json  cleanTeams.json  devils.json
nhl_scraper/: __init__.py  scraper.py
