[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-scraper"
version = "0.1.0"
description = "NHL stats and roster scraper"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "aiohttp>=3.8.0",
    "sqlalchemy>=2.0.0",
]

[tool.setuptools]
packages = ["nhl_scraper"]